testpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: aws9b
  labels:
    app: web
spec:
  containers:
  - name: myctn 
    image: nginx
    resources:
      limits: #최대 사용 가능 용량
        cpu: 500m
        memory: 128Mi
      requests: #촤소보장장
        cpu: 250m
        memory: 64Mi
    ports:
    - containerPort:  80
      name:  http
    volumeMounts:
    - name: myvol
      mountPath: /usr/share/nginx/html
  volumes:
    - name: myvol
      persistentVolumeClaim:
        claimName: 9b-pvc
