deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deploy
  namespace: aws9b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog-ctna
          image: jinsse/aws9:blog
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: myvol1
              mountPath: /usr/share/nginx/html/data
      volumes:
        - name: myvol1
          persistentVolumeClaim:
            claimName: 9b-pvc  # ← 여기가 PVC 이름

---

apiVersion: v1
kind: Service
metadata:
  name: aws9b-svc-blog
  namespace: aws9b
  labels:
    app.kubernetes.io/instance: aws9toy
spec:
  type: LoadBalancer
  selector:
    app: blog
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
